--- a/package.json
+++ b/package.json
@@ -12,24 +12,16 @@
   "dependencies": {
     "@fancyapps/ui": "^6.0.34",
     "bootstrap": "^5.3.8",
+    "imask": "^7.6.1",
     "swiper": "^12.0.2"
   },
   "devDependencies": {
-    "@babel/core": "^7.22.20",
-    "@babel/preset-env": "^7.22.20",
-    "babel-loader": "^9.1.3",
     "browser-sync": "^2.29.3",
     "del": "^6.1.1",
     "gulp": "^4.0.2",
-    "gulp-clean-css": "^4.3.0",
     "gulp-file-include": "^2.3.0",
+    "gulp-rename": "^2.1.0",
     "gulp-sass": "^5.1.0",
-    "gulp-sourcemaps": "^3.0.0",
-    "sass": "^1.75.0",
-    "terser-webpack-plugin": "^5.3.10",
-    "vinyl-named": "^1.1.0",
-    "webpack": "^5.91.0",
-    "webpack-cli": "^5.1.4",
-    "webpack-stream": "^7.0.0"
+    "sass": "^1.75.0"
   }
 }
