--- a/package.json
+++ b/package.json
@@ -22,6 +22,7 @@
     "gulp-file-include": "^2.3.0",
     "gulp-rename": "^2.1.0",
     "gulp-sass": "^5.1.0",
+    "gulp-sourcemaps": "^3.0.0",
     "sass": "^1.75.0"
   }
 }
